<resources>
    <string name="app_name">Mapkathon</string>
    <string name="title_activity_get">get</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Cài đặt</string>
    <string name="menu_item_1">Chỉ đường</string>
    <string name="menu_item_00">Yêu thích</string>
    <string name="menu_item_2">Popup</string>
    <string name="menu_item_3">Lựa chọn :</string>
    <string name="menu_item_4">Bệnh viện</string>
    <string name="menu_item_5">Ngân hàng</string>
    <string name="menu_item_6">Trạm xăng</string>
    <string name="menu_item_7">Trạm xe buýt</string>
    <string name="menu_item_8">Trung tâm mua sắm</string>
    <string name="menu_item_9">Trường đại học</string>
    <string name="menu_item_10">Nhà hàng</string>

</resources>
